# slam-path-coverage-missions

./: README.md
ethz/polygon_coverage_client/: CMakeLists.txt
ethz/polygon_coverage_client/launch/: polygon_coverage_client.launch
ethz/polygon_coverage_client/scripts/: polygon_client_node.py
ethz/workflow/: CMakeLists.txt
ethz/workflow/launch/: remote.launch  resource_meter.launch
ethz/workflow/scripts/: ethz_turtlebot.py  robot_bond.py
ethz/workflow/shell_scripts/: coverage_client.sh
greenzie/: README.md
greenzie/boustrophedon_client/: CMakeLists.txt
greenzie/boustrophedon_client/launch/: py_boustrophedon_client.launch  py_path_receiver.launch
greenzie/boustrophedon_client/scripts/: boustrophedon_client_node.py  boustrophedon_path_receiver_node.py
greenzie/maps/arena/: map.pgm
greenzie/workflow/: package.xml
greenzie/workflow/launch/: profilers.launch  remote.launch  resource_meter.launch
greenzie/workflow/scripts/: dumpcap.sh  greenzie_turtlebot.py  remote_bond.py  resource_meter.py  robot_bond.py
greenzie/workflow/shell_scripts/: boustrophedon_client.sh  boustrophedon_server.sh  path_receiver.sh
path_coverage/: README.md
path_coverage/ethz/: README.md
path_coverage/ethz/maps/arena/: map.yaml
path_coverage/ethz/polygon_coverage_client/: package.xml
path_coverage/ethz/polygon_coverage_ros/launch/: coverage_planner.launch
path_coverage/ethz/workflow/launch/: profilers.launch
path_coverage/ethz/workflow/scripts/: dumpcap.sh  resource_meter.py
path_coverage/ethz/workflow/shell_scripts/: coverage_server.sh  remote.sh
path_coverage/greenzie/: README.md
path_coverage/greenzie/boustrophedon_client/: CMakeLists.txt  package.xml
path_coverage/greenzie/boustrophedon_client/launch/: boustrophedon_client.launch
path_coverage/greenzie/boustrophedon_client/scripts/: boustrophedon_client_node.py  boustrophedon_path_receiver_node.py
path_coverage/greenzie/boustrophedon_server/launch/: boustrophedon_server.launch
path_coverage/greenzie/maps/arena/: map.yaml  x_coordinates.txt  y_coordinates.txt
path_coverage/greenzie/workflow/: CMakeLists.txt
path_coverage/greenzie/workflow/launch/: remote.launch  resource_meter.launch
path_coverage/greenzie/workflow/scripts/: dumpcap.sh  greenzie_turtlebot.py  remote_bond.py  resource_meter.py
path_coverage/greenzie/workflow/shell_scripts/: boustrophedon_client.sh  boustrophedon_server.sh  path_receiver.sh
path_coverage/navigation_params/: amcl.launch  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml
path_coverage/set_arena/: CMakeLists.txt  package.xml
path_coverage/set_arena/launch/: set_arena_node.launch
path_coverage/set_arena/src/: set_arena_node.cpp
s2_slam/: CMakeLists.txt  package.xml
s2_slam/launch/: SLAM_mission.launch  SLAM_mission_setup.launch  SLAM_robot.launch  resource_meter.launch
s2_slam/src/: dumpcap_recorder.py  pyshark_recorder.py  remote_SLAM_controller.py  remote_bond.py  resource_meter.py  robot_SLAM_controller.py  robot_bond.py  todo.txt
workflow/: package.xml
workflow/scripts/: remote_bond.py
