<?xml version="1.0"?>
<package format="2">
  <name>polygon_coverage_client</name>
  <version>0.0.0</version>
  <description>The polygon_coverage_client package</description>

  <maintainer email="joe@todo.todo">joe</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>polygon_coverage_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>psutils</build_depend>
  <build_depend>datetime</build_depend>
  <build_depend>time</build_depend>
  <build_depend>os</build_depend>
  <build_depend>csv</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>polygon_coverage_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>psutils</build_export_depend>
  <build_export_depend>datetime</build_export_depend>
  <build_export_depend>time</build_export_depend>
  <build_export_depend>os</build_export_depend>
  <build_export_depend>csv</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>polygon_coverage_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>psutils</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>os</exec_depend>
  <exec_depend>csv</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
